--- a/myStyle.css
+++ b/myStyle.css
@@ -20,11 +20,12 @@
 .prev, .next {
   cursor: pointer;
   position: absolute;
+  background-color: #ffeb3b83;
   width: auto;
   padding: 16px;
   margin-top: -40%;
   color: white;
-  font-size: 18px;
+  font-size: 30px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -38,7 +39,7 @@
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: #ffeb3b;
 }
 
 /* Caption text */
@@ -54,11 +55,11 @@
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: #f2f2f200;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
-  top: 0;
+  top: 0%;
 }
 
 /* The dots/bullets/indicators */
